# hospital-mgmt

./: .gitignore  CMakeLists.txt  Console.cpp  Console.h  README.md  patients.json
include/: Console.h  Date.h  Db.hpp  input.hpp  json.hpp
include/entity/: Appointment.h  Claim.h  Department.h  Doctor.h  Entity.h  Item.h  Message.h  Patient.h  Record.h
src/: Console.cpp  Console.h  Date.cpp  Db.hpp  Doctor.h  Item.h  Patient.cpp  Patient.h  Record.cpp  Record.h  main.cpp
src/entity/: Appointment.cpp  Claim.cpp  Department.cpp  Department.h  Doctor.cpp  Entity.cpp  Item.cpp  Item.h  Message.cpp  Patient.cpp  Record.cpp  Record.h
